# PhysioPipeline

./: .gitignore  README.md  data_info.py  pyproject.toml
data/: coi_structure.json
notebooks/: 01_LoadData.ipynb  02_ApplyDPPA.ipynb  03_PlotResults.ipynb
notebooks/.ipynb_checkpoints/: 01_LoadData-checkpoint.ipynb  02_ApplyDPPA-checkpoint.ipynb
src/: data_arrange_cohort.py  data_container.py  data_info.py  data_loader.py  dppa.py  helpers.py  physio_recording.py  session.py  subject.py  visualization.py
src/.ipynb_checkpoints/: physio_recording-checkpoint.py  session-checkpoint.py  subject-checkpoint.py
